# jit.mo

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Authors.md  CMakeLists.txt  License.md  ReadMe.md  appveyor.yml  package-info.json  package-info.json.in
docs/: jit.mo.field.maxref.xml  jit.mo.fieldmask.maxref.xml  jit.mo.func.maxref.xml  jit.mo.gen.maxref.xml  jit.mo.join.maxref.xml  jit.mo.time.maxref.xml
extras/: jit.mo-launch.maxpat
help/: foobanger.maxhelp  jit.mo.circle.maxhelp  jit.mo.field.maxhelp  jit.mo.fieldmask.maxhelp  jit.mo.func.maxhelp  jit.mo.gen.maxhelp  jit.mo.grid.maxhelp  jit.mo.join.maxhelp  jit.mo.slice.maxhelp  jit.mo.texture.maxhelp  jit.mo.time.maxhelp
init/: jit.mograph-objectmappings.txt
interfaces/: max.db.json
javascript/: jit.mo-worms.js  mo.particles.js
patchers/: 3d-transform.genjit  jit.mo-Alphablend.maxpat  jit.mo-AnimPath.maxpat  jit.mo-AudioVisuals.maxpat  jit.mo-CircleWorks.maxpat  jit.mo-OrganicMotion.maxpat  jit.mo-Worms.maxpat  jit.mo-circle.maxpat  jit.mo-particles.maxpat  jit.mo.circle.maxpat  jit.mo.grid.maxpat  jit.mo.slice.maxpat  jit.mo.texture.maxpat  jit_mo_cycle_prototype_update.maxpat  jit_mo_field_prototype.maxpat  jit_mo_line_prototype.maxpat  jit_mo_line_prototype_update.maxpat  jit_mo_vsynth.maxpat  vsynth-world.maxpat
source/projects/jit.mo.time/: CMakeLists.txt  jit.mo.time.cpp
testpatches/: ctxlsnr.js  jit.mo.phasor.maxpat  jit.mo.tempo.maxpat  jit_mo_cycle_prototype.maxpat  jit_mo_field_prototype_update.maxpat  jit_mo_trails_prototype.maxpat  tempo-tests.maxpat
(+14 files in other folders)
